--- a/angular.json
+++ b/angular.json
@@ -2,5 +2,169 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "ngx-floating-img": {
+      "root": "projects/ngx-floating-img",
+      "sourceRoot": "projects/ngx-floating-img/src",
+      "projectType": "library",
+      "prefix": "fi",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-floating-img/tsconfig.lib.json",
+            "project": "projects/ngx-floating-img/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-floating-img/src/test.ts",
+            "tsConfig": "projects/ngx-floating-img/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-floating-img/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-floating-img/tsconfig.lib.json",
+              "projects/ngx-floating-img/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "ngx-floating-img-tester": {
+      "root": "projects/ngx-floating-img-tester/",
+      "sourceRoot": "projects/ngx-floating-img-tester/src",
+      "projectType": "application",
+      "prefix": "fit",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/ngx-floating-img-tester",
+            "index": "projects/ngx-floating-img-tester/src/index.html",
+            "main": "projects/ngx-floating-img-tester/src/main.ts",
+            "polyfills": "projects/ngx-floating-img-tester/src/polyfills.ts",
+            "tsConfig": "projects/ngx-floating-img-tester/tsconfig.app.json",
+            "assets": [
+              "projects/ngx-floating-img-tester/src/favicon.ico",
+              "projects/ngx-floating-img-tester/src/assets"
+            ],
+            "styles": [
+              "projects/ngx-floating-img-tester/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/ngx-floating-img-tester/src/environments/environment.ts",
+                  "with": "projects/ngx-floating-img-tester/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "ngx-floating-img-tester:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "ngx-floating-img-tester:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "ngx-floating-img-tester:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-floating-img-tester/src/test.ts",
+            "polyfills": "projects/ngx-floating-img-tester/src/polyfills.ts",
+            "tsConfig": "projects/ngx-floating-img-tester/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-floating-img-tester/karma.conf.js",
+            "styles": [
+              "projects/ngx-floating-img-tester/src/styles.css"
+            ],
+            "scripts": [],
+            "assets": [
+              "projects/ngx-floating-img-tester/src/favicon.ico",
+              "projects/ngx-floating-img-tester/src/assets"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-floating-img-tester/tsconfig.app.json",
+              "projects/ngx-floating-img-tester/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "ngx-floating-img-tester-e2e": {
+      "root": "projects/ngx-floating-img-tester-e2e/",
+      "projectType": "application",
+      "prefix": "",
+      "architect": {
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/ngx-floating-img-tester-e2e/protractor.conf.js",
+            "devServerTarget": "ngx-floating-img-tester:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "ngx-floating-img-tester:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "projects/ngx-floating-img-tester-e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "ngx-floating-img"
 }
