--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,11 @@
             "main": "projects/ngx-floating-img-tester/src/main.ts",
             "polyfills": "projects/ngx-floating-img-tester/src/polyfills.ts",
             "tsConfig": "projects/ngx-floating-img-tester/tsconfig.app.json",
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "assets": [
               "projects/ngx-floating-img-tester/src/favicon.ico",
               "projects/ngx-floating-img-tester/src/assets"
@@ -118,7 +123,7 @@
             "tsConfig": "projects/ngx-floating-img-tester/tsconfig.spec.json",
             "karmaConfig": "projects/ngx-floating-img-tester/karma.conf.js",
             "styles": [
-              "projects/ngx-floating-img-tester/src/styles.scss"
+              "projects/ngx-floating-img-tester/src/styles/main.scss"
             ],
             "scripts": [],
             "assets": [
