Working on home page

--- a/angular.json
+++ b/angular.json
@@ -59,7 +59,7 @@
             "tsConfig": "projects/ngx-floating-img-tester/tsconfig.app.json",
             "stylePreprocessorOptions": {
               "includePaths": [
-                "src/styles"
+                "src/styles/"
               ]
             },
             "assets": [
