--- a/projects/ngx-floating-img/package.json
+++ b/projects/ngx-floating-img/package.json
@@ -14,7 +14,7 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": "^7.0.0",
-    "@angular/core": "^7.0.0"
+    "@angular/common": ">=6.0.0",
+    "@angular/core": ">=6.0.0"
   }
 }
